@@ -1,10 +1,0 @@
-{
-    "BenchmarkAnythingData" : [
-        {
-            "NAME"     : "benchmarkanything.test.metric",
-            "VALUE"    : "non-number string",
-            "compiler" : "gcc",
-            "keyword"  : "affe"
-        }
-    ]
-}
