@@ -1,10 +1,0 @@
-{
-    "BenchmarkAnythingData" : [
-        {
-            "NAME"     : "benchmarkanything.test.metric",
-            "VALUE"    : 34.56789,
-            "UNIT"     : true,
-            "comment"  : "missing string unit"
-        }
-    ]
-}
